# xxx

./: .gitignore  GPU_ARCHITECTURE_PLAN.md  GPU_CODE_PLAN.md  NATIVE_RENDERER_MIGRATION.md  README.md  gradlew  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gles_bridge.cpp  gles_compositor.cpp  gles_compositor.h  gles_shader.cpp  gles_shader.h  native_bridge.cpp  native_compositor.cpp  native_compositor.h  video_export_engine.cpp  video_export_engine.h  yuv_convert.cpp  yuv_convert.h
app/src/main/java/com/example/: BlendingOpacity.kt  ColorFill.kt  ColorPalette.kt  EditorComponents.kt  ExportShareMenu.kt  MainActivity.kt  MoveTransform.kt  ProjectSettingsMenu.kt  VectorDrawingEditor.kt  VideoLayerPreview.kt  VideoRenderer.kt
app/src/main/java/com/example/model/: AppliedEffect.kt
app/src/main/java/com/example/modifier/: EffectsModifier.kt
app/src/main/java/com/example/render/: AnimatedGifEncoder.kt  EGLCore.kt  GPURenderer.kt  MediaCodecVideoDecoder.kt  NativeRenderer.kt  WindowSurface.kt
app/src/main/java/com/example/ui/canvas/: CanvasArea.kt
app/src/main/java/com/example/ui/effects/: AppliedEffectCard.kt  EffectBrowserScreen.kt  EffectParameterSlider.kt  EffectsMenu.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/ui/timeline/: TimelineArea.kt
app/src/main/java/com/example/viewmodel/: EditorViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
